[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://impact.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/PlayerUI.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PtsLabel" type="Label" parent="."]
margin_right = 1900.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="PlayerUIs" type="HBoxContainer" parent="."]
margin_top = 25.93
margin_right = 1900.0
margin_bottom = 25.93
custom_constants/separation = 800
alignment = 1

[node name="PlayerUI" parent="PlayerUIs" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_right = 550.0
margin_bottom = 0.0

[node name="PlayerUI2" parent="PlayerUIs" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1350.0
margin_right = 1350.0
margin_bottom = 0.0
